--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
              
               <div class="row mt-5">
           <div class="col text-center">
-            <p><a style="font-size: 20px" href="tel: +234" class="btn btn-primary btn-outline-warning p-3">Subcribe to our Audio Messages</a></p>
+            <p><a style="font-size: 20px" href="tel: +234" class="btn btn-primary btn-outline-warning p-3">Subcribe to our Messages</a></p>
           </div>
         </div>
             </div>
