--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-10 ftco-animate text-center" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Needing <strong>Jesus Christ</strong> Together</h1>
-            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="audio/audiobooks.zip" class="btn btn-primary btn-outline-white px-4 py-3">Download Audio Books</a></p>
+            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="./sermons" class="btn btn-primary btn-outline-white px-4 py-3">Download Audio Books</a></p>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
 										</p>
 									</div>
 									<div class="button">
-										<p><a href="#" class="btn btn-primary p-3">J o i n &nbsp;&nbsp;  u s</a></p>
+										<p><a href="https://wa.me/+2348155735173" class="btn btn-primary p-3">J o i n &nbsp;&nbsp;  u s</a></p>
 									</div>
 								</div>
 							</div>
@@ -105,7 +105,7 @@
       <div class="container-fluid">
         <div class="section-2-blocks-wrapper d-flex row no-gutters">
           <div class="img col-md-6 ftco-animate" style="background-image: url('images/pray.jpg');">
-            <a href="https://vimeo.com/45830194" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
+            <a href="./sermons" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
           </div>
           <div class="text col-md-6 ftco-animate">
             <div class="text-inner align-self-start">
@@ -128,7 +128,7 @@
              
               <div class="row mt-5">
           <div class="col text-center">
-            <p><a style="font-size: 20px" href="tel: +234" class="btn btn-primary btn-outline-warning p-3">Subcribe to our Messages</a></p>
+            <p><a style="font-size: 20px" href="tel: +234 815 573 5173" class="btn btn-primary btn-outline-warning p-3">Subcribe to our Messages</a></p>
           </div>
         </div>
             </div>
@@ -148,33 +148,33 @@
         <div class="row">
         	<div class="col-md-4 ftco-animate">
         		<div class="sermons">
-        			<a href="audio/ResetYourMind.file" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/sermons-1.jpg);">
+        			<a href="./sermons" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/sermons-1.jpg);">
         				<div class="icon d-flex justify-content-center align-items-center">
         					<span class="icon-play"></span>
         				</div>
         			</a>
         			<div class="text">
-        				<h3><a href="#">Reset Your Mind</a></h3>
+        				<h3><a href="./sermons">Reset Your Mind</a></h3>
         				<span class="position">Pastor. Moses Abatan</span>
         			</div>
         		</div>
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="sermons">
-        			<a href="https://vimeo.com/45830194" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/sermons-2.jpg);">
+        			<a href="./sermons" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/sermons-2.jpg);">
         				<div class="icon d-flex justify-content-center align-items-center">
         					<span class="icon-play"></span>
         				</div>
         			</a>
         			<div class="text">
-        				<h3><a href="#">Taking Responsibility</a></h3>
+        				<h3><a href="./sermons">Taking Responsibility</a></h3>
         				<span class="position">Pastor. Moses Abatan</span>
         			</div>
         		</div>
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="sermons">
-        			<a href="https://vimeo.com/45830194" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/sermons-3.jpg);">
+        			<a href="./sermons" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/sermons-3.jpg);">
         				<div class="icon d-flex justify-content-center align-items-center">
         					<span class="icon-play"></span>
         				</div>
